Added followers & improved posters upload and embedding
